--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,6 +100,7 @@ body {
     font-size: 8px;
     display: flex;
     opacity: 0;
+    transition: 0.3s;
 }
 
 .container .formulario .campo.msg-errado {
@@ -107,6 +108,3 @@ body {
     opacity: 1;
 }
 
-.container .formulario .campo.msg-correto {
-    opacity: 0;
-}
