--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,6 +115,7 @@ body {
         flex-direction: column;
         width: 100%;
         margin:auto;
+        min-height: 100vh;
     }
 
     .container .conteudo {
